# shpr

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  build.sh  debug.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
shpr/: __init__.py  auth.py  db.py  helper.py  item.py  models.py
shpr/static/: style.css
shpr/static/js/: filter.js  swipe.js
shpr/templates/: base.html
shpr/templates/auth/: login.html  register.html
shpr/templates/item/: create.html  index.html  update.html
tests/: conftest.py  docker-compose.yml  test_auth.py  test_db.py  test_factory.py  test_item.py
